Fixed gap between rows

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,3 +22,7 @@
         color: inherit;
     }
 }
+
+a:link {
+    color: #fff;
+}
