--- a/src/containers/CardsContainer/CardsContainer.scss
+++ b/src/containers/CardsContainer/CardsContainer.scss
@@ -2,5 +2,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     padding: 40px 10px;
 }
